--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -17,3 +17,5 @@ $helvetica: "helvetica", sans-serif;
 $helveticaBold: "helvetica-bold", sans-serif;
 
 //screens
+$tablet: "min-width: 768px";
+$desktop: "min-width: 1024px";
