--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -1,5 +1,44 @@
 @mixin h1($color: $titleColor) {
-  font-size: 8rem;
+  font-size: 5.5rem;
   color: $color;
   font-family: $helveticaBold;
+  line-height: 1.1;
+  @media ($tablet) {
+    font-size: 8rem;
+  }
+}
+@mixin h2($color: $titleColor) {
+  font-size: 4rem;
+  color: $color;
+  font-family: $helveticaBold;
+  line-height: 1.3;
+}
+@mixin h3() {
+  font-size: 2.4rem;
+  color: $titleColor;
+  line-height: 1.3;
+  font-family: $helvetica;
+  font-weight: normal;
+  margin-bottom: 20px;
+}
+@mixin p1($fontFamily: $avenirMedium) {
+  font-size: 1.8rem;
+  font-weight: 500;
+  font-family: $fontFamily;
+  line-height: 1.6;
+  color: $textColor;
+}
+@mixin p2($fontFamily: $avenirBook) {
+  font-size: 1.6rem;
+  font-weight: 500;
+  font-family: $fontFamily;
+  line-height: 1.6;
+  color: $textColor;
+  width: 220px;
+  height: 160px;
+}
+@mixin arrow() {
+  color: $violet;
+  font-size: 2rem;
+  margin-left: 1.5rem;
 }
