--- a/src/assets/styles/uikit.scss
+++ b/src/assets/styles/uikit.scss
@@ -7,7 +7,7 @@
 }
 
 .container {
-  max-width: 1600px;
+  max-width: 1117px;
   margin: auto;
 }
 
@@ -32,4 +32,13 @@
 }
 .p2 {
   @include p2();
+}
+.light-btn {
+  @extend %light-btn;
+}
+.fas {
+  @extend %arrow;
+}
+.dark-btn {
+  @include dark-btn();
 }
