--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -72,3 +72,11 @@
   object-fit: cover;
   object-position: center;
 }
+%ball {
+  position: absolute;
+  background-color: $white;
+  width: 4px;
+  height: 4px;
+  border-radius: 4px;
+  top: 10px;
+}
