--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -2,16 +2,33 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 65px;
+  padding-top: 45px;
+  padding-bottom: 40px;
 
+  @media ($tablet) {
+    padding-right: 30px;
+    padding-top: 65px;
+    padding-bottom: 60px;
+  }
+  @media ($desktop) {
+    padding-bottom: 147px;
+  }
   &__nav {
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    @media ($tablet) {
+      justify-items: center;
+      align-items: center;
+      width: auto;
+    }
   }
   &__btn {
     display: none;
     @media ($tablet) {
       display: block;
+      // margin-right: 60px;
     }
   }
 
@@ -23,12 +40,19 @@
 
     @media ($tablet) {
       flex-direction: row;
-      margin-left: 60px;
     }
     @media ($desktop) {
       margin-left: 141px;
     }
   }
+  &__nav-item {
+    height: 50px;
+
+    @media ($tablet) {
+      height: auto;
+    }
+  }
+
   &__nav-link {
     margin-bottom: 40px;
     @include p1();
@@ -43,7 +67,54 @@
   &__nav-link:hover {
     text-shadow: 0 0 1px #212353;
   }
+
+  &__burger {
+    display: block;
+    cursor: pointer;
+
+    @media ($tablet) {
+      display: none;
+    }
+  }
+  &__burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #212353;
+    margin: 5px;
+    transition: all 0.3s ease;
+  }
 }
+
+@media screen and (max-width: 767px) {
+  body {
+    overflow-x: hidden;
+  }
+  .header__nav-items {
+    position: absolute;
+    right: 0;
+    top: 130px;
+    transform: translateX(100%);
+    transition: transform 0.5s ease;
+    background-color: $white;
+    padding: 50px;
+    border: #212353 solid 2px;
+    border-radius: 10px;
+  }
+}
+
 .active {
   text-shadow: 0 0 1px #212353;
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+.toggle .header__burger-line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+.toggle .header__burger-line2 {
+  opacity: 0;
+}
+.toggle .header__burger-line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
 }
