--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -19,3 +19,5 @@ $helveticaBold: "helvetica-bold", sans-serif;
 //screens
 $tablet: "min-width: 768px";
 $desktop: "min-width: 1024px";
+$max-desktop: "min-width: 1044px";
+$screen: "min-width: 1450px";
