--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,25 +1,28 @@
 .header {
+  @extend %container;
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding-top: 45px;
-  padding-bottom: 40px;
-
+  margin-top: 45px;
+  margin-bottom: 40px;
   @media ($tablet) {
-    padding-right: 30px;
-    padding-top: 65px;
-    padding-bottom: 60px;
+    justify-content: space-between;
+    padding: 0 30px;
+    margin-top: 65px;
+    margin-bottom: 60px;
   }
   @media ($desktop) {
-    padding-bottom: 147px;
+    margin-bottom: 147px;
+  }
+  @media ($screen) {
+    padding: 0;
   }
   &__nav {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     width: 100%;
     @media ($tablet) {
-      justify-items: center;
+      // justify-items: center;
       align-items: center;
       width: auto;
     }
@@ -97,7 +100,6 @@
     transition: transform 0.5s ease;
     background-color: $white;
     padding: 50px;
-    border: #212353 solid 2px;
     border-radius: 10px;
   }
 }
@@ -108,6 +110,8 @@
 
 .nav-active {
   transform: translateX(0%);
+  right: 100px;
+  box-shadow: 0 0 15px #212353;
 }
 .toggle .header__burger-line1 {
   transform: rotate(-45deg) translate(-5px, 6px);
