--- a/src/assets/styles/layout/_title.scss
+++ b/src/assets/styles/layout/_title.scss
@@ -1,4 +1,5 @@
 .title {
+  @extend %container;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,6 +7,11 @@
   @media ($desktop) {
     position: relative;
     align-items: stretch;
+    padding: 0 40px;
+  }
+  @media ($screen) {
+    // padding-bottom: 115px;
+    padding: 0 0 85px 0;
   }
 
   &__h1 {
@@ -18,6 +24,9 @@
     }
     @media ($desktop) {
       width: 645px;
+      margin-bottom: 30px;
+    }
+    @media ($screen) {
       margin-bottom: 50px;
     }
   }
@@ -33,8 +42,13 @@
     }
     @media ($desktop) {
       position: absolute;
-      right: -62px;
+      right: 0px;
       top: 82px;
+      margin-bottom: 0;
+    }
+    @media ($screen) {
+      top: 82px;
+      right: -122px;
       width: 885px;
       height: 468px;
     }
@@ -42,17 +56,19 @@
   &__text {
     @include p1();
     width: 300px;
+    text-align: justify;
+
     @media ($tablet) {
+      text-align: inherit;
       width: 600px;
     }
     @media ($desktop) {
       width: 380px;
-      margin-bottom: 50px;
     }
   }
 
   &__btn {
-    margin-top: 40px;
+    margin-top: 50px;
   }
 
   &__btn .dark-btn {
