--- a/src/assets/styles/components/_testimonial.scss
+++ b/src/assets/styles/components/_testimonial.scss
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  box-shadow: 0 20px 0 0 rgba(156, 105, 226, 0.3);
+  box-shadow: 0 20px 0 0 rgb(129, 63, 223);
   background-color: #ffffff;
-  margin: 20px;
   align-items: center;
   justify-content: center;
   width: 300px;
