--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -122,3 +122,10 @@
 .toggle .header__burger-line3 {
   transform: rotate(45deg) translate(-5px, -6px);
 }
+
+.light-btn {
+  @extend %light-btn;
+}
+.fas {
+  @extend %arrow;
+}
