--- a/src/assets/styles/utils/_vars.scss
+++ b/src/assets/styles/utils/_vars.scss
@@ -17,6 +17,7 @@ $helvetica: "helvetica", sans-serif;
 $helveticaBold: "helvetica-bold", sans-serif;
 
 //screens
+$max-phone: "min-width: 425px";
 $tablet: "min-width: 768px";
 $desktop: "min-width: 1024px";
 $max-desktop: "min-width: 1044px";
