--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -22,7 +22,6 @@
     justify-content: space-evenly;
     width: 100%;
     @media ($tablet) {
-      // justify-items: center;
       align-items: center;
       width: auto;
     }
@@ -31,7 +30,6 @@
     display: none;
     @media ($tablet) {
       display: block;
-      // margin-right: 60px;
     }
   }
 
@@ -89,15 +87,16 @@
 }
 
 @media screen and (max-width: 767px) {
-  body {
-    overflow-x: hidden;
-  }
+  // body {
+  //   overflow-x: hidden;
+  // }
   .header__nav-items {
+    display: none;
     position: absolute;
     right: 0;
     top: 130px;
-    transform: translateX(100%);
-    transition: transform 0.5s ease;
+    // transform: translateX(100%);
+    // transition: transform 0.5s ease;
     background-color: $white;
     padding: 50px;
     border-radius: 10px;
@@ -109,8 +108,9 @@
 }
 
 .nav-active {
-  transform: translateX(0%);
-  right: 100px;
+  display: flex;
+  // transform: translateX(0%);
+  right: 30px;
   box-shadow: 0 0 15px #212353;
 }
 .toggle .header__burger-line1 {
