--- a/src/assets/styles/layout/_testimonials.scss
+++ b/src/assets/styles/layout/_testimonials.scss
@@ -63,8 +63,12 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      margin-right: 150px;
+      margin-right: 120px;
       padding: 15px;
+
+      @media ($max-phone) {
+        margin-right: 150px;
+      }
       @media ($tablet) {
         margin-right: 0;
       }
