--- a/src/assets/styles/utils/_mixins.scss
+++ b/src/assets/styles/utils/_mixins.scss
@@ -47,6 +47,7 @@
 %light-btn {
   // width: 150px;
   display: flex;
+  align-items: center;
   align-self: center;
   border-radius: 50px;
   box-shadow: 0 5px 5px 0 rgba(75, 93, 104, 0.1);
@@ -64,6 +65,9 @@
     padding: 17px 29px;
     width: 210px;
   }
+  &:hover {
+    background-color: rgb(245, 241, 241);
+  }
 }
 @mixin dark-btn($color: $coral) {
   background-color: $color;
@@ -76,6 +80,10 @@
   color: $white;
   border-radius: 50px;
   display: flex;
+
+  &:hover {
+    opacity: 0.5;
+  }
   @media ($max-phone) {
     padding: 17px 37px;
     width: 173px;
