--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -73,11 +73,7 @@
       display: flex;
       flex-direction: column;
       align-items: left;
-      width: 250px;
-
-      @media ($max-phone) {
-        width: 280px;
-      }
+      width: 280px;
 
       @media ($screen) {
         width: 335px;
@@ -153,6 +149,9 @@
         font-size: 1.6rem;
         line-height: 2.5;
         color: $titleColor;
+        &:hover {
+          text-shadow: 0 0 1px $titleColor;
+        }
       }
       &__about a:first-child {
         font-family: $avenirHeavy;
@@ -186,6 +185,9 @@
         font-size: 1.6rem;
         line-height: 2.5;
         color: $titleColor;
+        &:hover {
+          text-shadow: 0 0 1px $titleColor;
+        }
       }
       &__help a:first-child {
         font-family: $avenirHeavy;
